# TER_M2

./: .gitignore  README.md  pyproject.toml
docs/: README.md  extracted_text.txt
src/scripts/: extract_text_images_from_pdf.py  qsvm.py  test_qiskit.py
