[project]
name = "ter-m2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf>=1.7.2",
    "pdf2image>=1.17.0",
    "pennylane>=0.40.0",
    "pytesseract>=0.3.13",
    "qiskit-machine-learning>=0.8.2",
    "qiskit>=1.4.0",
    "scikit-learn>=1.6.1",
    "stouputils>=1.0.20",
]
